--- a/css/style.css
+++ b/css/style.css
@@ -94,18 +94,20 @@
     max-width: 850px;
 }
 .exp-slides{
+    /* max-width: 600px; */
+}
+.width-max-600{
     max-width: 600px;
 }
 
 
 
 
-
 @media (min-width: 34em) {
     .card-columns {
-        -webkit-column-count: 1;
-        -moz-column-count: 1;
-        column-count: 1;
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
     }
 }
 
